# riscose

./: .cvsignore  DEBUGGING.md  Makefile.am  PROBLEMS  README  README.md  TODO  ToDo  configure.ac  configure.in
.github/workflows/: ci.yml
man/: Makefile.am  riscose.1  riscosehack.1
mod/: BASIC
ro-utils/: Makefile.am
ro-utils/unmodsqz/: .gitignore  Makefile.am  unmodsqz.c  unmodsqz.h  unsqueezec.c
src/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.common  Makefile.options  arm.c  arm.h  armdefs.h  armemu.c  armemu.h  arminit.c  arminit.h  armsupp.h  cli.c  clib_file.c  clib_file.h  clib_routines.h  compilerom.pl  def.h  error.list  heap.c  heap.h  heap2.c  heaptest.c  linkscript  main.c  map.h  mem.c  mem.h  mkswichunk.sh  module.c  module.h  native-main.c  osbyte.c  osfile.c  place.h  riscose.h  riscostypes.h  rom.h  (+10 more)
src/armul/: Make-defs  Makefile  Makefile.am  Makefile~  arm-core.xml  arm.c  armdefs.h  armemu.c  arminit.c  armrdi.c  armrdi.h  armsupp.c  armvirt.c  instr.c  instr.h  rsp-server.c  rsp-server.h
src/defmod/: .gitignore  Makefile.am  README  TODO  def.c  def.h  defmod.y  fileswitch.h  hostfs.h  kernel.h  lookup.c  lookup.h  m.h  macros.h  messagetrans.h  mklinks  os.h  osfile.h  riscos.c  riscos.h  riscose.c  riscose.h  riscoseapi.c  riscoseapi.h  riscoseerr.c  riscoseerr.h  riscosehdr.c  riscosehdr.h  riscosetpl.c  riscosetpl.h  riscosever.h  swis.h  territory.h  trace.h  types.h  unix.c  x.c  x.h
src/defmod/bootstrap/: Makefile.am  messagetrans.h  os.h  territory.h  types.h
src/include/: Makefile.am  arm.h  heap.h  map.h  mem.h  module.h  riscostypes.h  rom.h  swi.h  util.h  vdu.h
src/kernel/: Makefile  Makefile.am  heaptest  module.c  osfile.c  osfileio.c  osmisc.c  osmodule.c  sysvars.c  sysvars.h  vdu.c
src/modules/: BasicTrans.c  FileSwitch.c  Makefile  Makefile.am  SharedCLibrary.c  SharedCLibrary.h  UtilityModule.c
src/monty/: Makefile.am  array.h  enum.h  file.c  file.h  hash.c  hash.h  hexdump.c  hexdump.h  makefile  mem.c  mem.h  monty.c  monty.h  pool.c  pool.h  str.c  str.h
src/native/: Make-defs  Makefile  Makefile.am  mremap2.S  mremap2.h  native-arm.c  native-main.c  riscose.lds  run.S  stub.h  swi_stub.S
src/os/: Makefile.am  README  basictrans.c  crc16arc.c  crc16arc.h  ddeutils.c  fileswitch.c  fpemulator.c  hourglass.c  messagetrans.c  misc.c  module.c  os.c  osargs.c  osbyte.c  osfile.c  osfind.c  osfscontrol.c  osword.c  resourcefs.c  sharedclib.c  sharedunixlibrary.c  taskwindow.c  territory.c  utilitymod.c  vdu.c  wimpreadsysinfo.c
src/osapi/: .cvsignore  .gitignore  Makefile.am  README  basictrans.osl  ddeutils.osl  fileswitch.osl  font.osl  fpemulator.osl  messagetrans.osl  os.osl  osargs.osl  osbyte.osl  osfile.osl  osfind.osl  osfscontrol.osl  osheap.osl  osspriteop.osl  osword.osl  resourcefs.osl  sharedunixlibrary.osl  taskwindow.osl  territory.osl  wimp.osl  wimpreadsysinfo.osl
src/oslib/: Makefile.am  README
src/rom/: .cvsignore  Makefile  Makefile.am  compilerom.in  compilerom.pl  error.base  error.list  rom.h
src/sleeve/: .cvsignore  Make-defs  Makefile  Makefile.am  README  TODO  arm.c  arm.h  armsleeve.c  bdt.c  dis.c  dis.h  genbdt.c  mm.c  mm.h  sleeve.c  sleeve.h  sleeveconfig.h  stub.h  test.c
tests/: .cvsignore  .gitignore  Makefile.am  argv  armas  armas.in  os_byte  os_byte.aa  os_exit  os_exit.aa  setuprom
util/: .gitignore  Makefile.am
