AC_INIT(src/monty/monty.c)
AC_CONFIG_AUX_DIR(util)
AM_INIT_AUTOMAKE(riscose,0.01)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_RANLIB
AC_PATH_PROG(PERL, perl)
test -z "$PERL" && AC_MSG_ERROR([no acceptable $ac_word found in \$PATH])

ARM=armul
AC_ARG_ENABLE(arm,
[  --enable-arm=ARM        Set the ARM emulation to use.  Choose one of
                          armul, sleeve, or native [armul]],
    ARM=$enableval)
case "$ARM" in
armul) ;;
*) AC_MSG_ERROR([only --enable-arm=armul handled at the moment])
esac
AC_SUBST(ARM)

# FIXME: we should only use readline if --with-readline is used, or at
# least allow it to be disabled with --without-readline.
AC_CHECK_HEADERS(readline.h readline/readline.h)

AC_C_INLINE

AC_OUTPUT([ \
        Makefile \
        man/Makefile \
        src/Makefile \
        src/armul/Makefile \
        src/kernel/Makefile \
        src/include/Makefile \
        src/modules/Makefile \
        src/monty/Makefile \
        src/rom/Makefile \
        src/rom/compilerom \
        util/Makefile \
    ], \
    [chmod +x src/rom/compilerom]
    )
