noinst_PROGRAMS = defmod

defmod_SOURCES = \
    def.c def.h defmod.y kernel.h lookup.c lookup.h macros.h \
    main.h messagetrans.h m.h os.h riscoseapi.c riscoseapi.h riscose.c \
    riscose.h riscosehdr.c riscosehdr.h riscosetpl.c riscosetpl.h \
    riscosever.h riscos.h trace.h types.h unix.c x.c x.h

# FIXME:  why doesn't automake get rid of this anyway?  is it an
# automake bug?
MAINTAINERCLEANFILES = defmod.c

EXTRA_DIST = .cvsignore
