noinst_LIBRARIES = libos.a

INCLUDES = -I$(srcdir)/../oslib -I$(srcdir)/../include -I.. \
    -I$(srcdir)/.. -I$(srcdir)/../osapi -I$(srcdir)/../@ARM@

libos_a_SOURCES = \
    basictrans.c \
    fileswitch.c \
    hourglass.c \
    messagetrans.c \
    misc.c \
    module.c \
    osbyte.c \
    os.c \
    osfile.c \
    osword.c \
    sharedclib.c \
    utilitymod.c \
    vdu.c

EXTRA_DIST = .cvsignore
